# takehome

./: .gitignore  Makefile  README.md  pyproject.toml  scratch.ipynb  setup.cfg  summary.ipynb
inputs/: fake_member_list_a.parquet  fake_member_list_b.parquet
takehome/: __main__.py  extract.py  go.py  load.py  paths.py  transform.py
tests/: test_takehome.py  test_transform.py
